# image-embedding-pipeline

./: .gitignore  Pulumi.yaml  README.md  __main__.py  pyproject.toml
lambdas/process_image/: Dockerfile  conftest.py  process_image.py  tests.py
resources/: athena.py  dynamodb.py  iam.py  lambdas.py  s3.py
