[tool.poetry]
name = "image-embedding-pipeline"
version = "0.1.0"
description = ""
authors = ["Kai <krikhye@gmail.com>"]
readme = "README.md"
package-mode = false

[tool.poetry.dependencies]
python = "^3.13"
pulumi = "^3.137.0"
pulumi-aws = "^6.57.0"
pulumi-docker-build = "^0.0.7"

[tool.poetry.group.dev.dependencies]
ruff = "^0.7.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.ruff]
line-length = 120
lint.select = ["E", "F", "I"]
fix = true

